external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_bool.ide.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/ide_mode/missing_match_bool.move:2:3
  │
1 │ #[allow(ide_path_autocomplete)]
  │   ----- Attribute previously given here
2 │ #[allow(ide_dot_autocomplete)]
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute 'allow' attached to the same item

error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_bool.move:5:16
  │
5 │         match (true) {
  │                ^^^^ Pattern 'false' not covered

note[I15004]: IDE missing match arms
  ┌─ tests/move_2024/ide_mode/missing_match_bool.move:5:22
  │  
5 │           match (true) {
  │ ╭──────────────────────^
6 │ │             true => 0
7 │ │         }
  │ ╰─────────^ Missing arms: 'false'

error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/ide_mode/missing_match_bool.move:11:16
   │
11 │         match (true) {
   │                ^^^^ Pattern '_' not covered

note[I15004]: IDE missing match arms
   ┌─ tests/move_2024/ide_mode/missing_match_bool.move:11:22
   │  
11 │           match (true) {
   │ ╭──────────────────────^
12 │ │         }
   │ ╰─────────^ Missing arms: 'false' and 'true'

